Mudança para comportar novas filas e auditoria e no swagger
